--- a/basic.htm
+++ b/basic.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport">
-        <title>Cubo rosa</title>
+        <title>Cubo</title>
 
         <link rel='stylesheet'   type='text/css' href='index-style.css'>
     </head>
