--- a/basic.htm
+++ b/basic.htm
@@ -70,5 +70,5 @@
 
     <script src="vec-mat.js"></script>
     <script src="cubo.js"></script>
-    <script src="fila_cubo.js"></script>
+    <script src="prueba.js"></script>
 </html>
